package com.example.the7wonders.domain;

public enum CardCategory {

	MaterialCard,
	ProgressCard,
	WarCard,
	PoliticCard
}
