package com.example.the7wonders.domain;

public enum Material {
	Wood, //
	Paper, //
	Brick, //
	Stone, // 
	Glass, //
	Gold; //
}
