package com.example.the7wonders.domain;

public enum ScienceCategory {

	Law,
	Mechanic,
	Architect;
}
