package com.example.the7wonders.domain.tokens;

public abstract class Tokens {

}
